; ModuleID = '/home/carl/AnghaBench/linux/net/bluetooth/extr_hci_request.c_adv_use_rpa.c'
source_filename = "/home/carl/AnghaBench/linux/net/bluetooth/extr_hci_request.c_adv_use_rpa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hci_dev = type { i32 }

@HCI_PRIVACY = common dso_local global i32 0, align 4
@HCI_LIMITED_PRIVACY = common dso_local global i32 0, align 4
@MGMT_ADV_FLAG_DISCOV = common dso_local global i32 0, align 4
@HCI_BONDABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hci_dev*, i32)* @adv_use_rpa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @adv_use_rpa(%struct.hci_dev* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.hci_dev*, align 8
  %5 = alloca i32, align 4
  store %struct.hci_dev* %0, %struct.hci_dev** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.hci_dev*, %struct.hci_dev** %4, align 8
  %7 = load i32, i32* @HCI_PRIVACY, align 4
  %8 = call i64 @hci_dev_test_flag(%struct.hci_dev* %6, i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %29

11:                                               ; preds = %2
  %12 = load %struct.hci_dev*, %struct.hci_dev** %4, align 8
  %13 = load i32, i32* @HCI_LIMITED_PRIVACY, align 4
  %14 = call i64 @hci_dev_test_flag(%struct.hci_dev* %12, i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %11
  store i32 1, i32* %3, align 4
  br label %29

17:                                               ; preds = %11
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* @MGMT_ADV_FLAG_DISCOV, align 4
  %20 = and i32 %18, %19
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %28

22:                                               ; preds = %17
  %23 = load %struct.hci_dev*, %struct.hci_dev** %4, align 8
  %24 = load i32, i32* @HCI_BONDABLE, align 4
  %25 = call i64 @hci_dev_test_flag(%struct.hci_dev* %23, i32 %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %22
  store i32 0, i32* %3, align 4
  br label %29

28:                                               ; preds = %22, %17
  store i32 1, i32* %3, align 4
  br label %29

29:                                               ; preds = %28, %27, %16, %10
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i64 @hci_dev_test_flag(%struct.hci_dev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
